@@ -1074,6 +1074,7 @@
           02-09-01  Bfo     Some debug messages reduced.
           02-09-01  Bfo     big/little endian bug with *idp fixed
           02-09-02  Bfo     Bug at rawmode write with multisector support fixed.
+          02-09-03  Bfo     errno.h -> errno_adapted.h
     3.16  02-09-??  Bfo     ...
     -------------------
 */
